--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
  <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
 
  <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
- <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'> 
+ <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
  <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
  <link href='http://fonts.googleapis.com/css?family=Goudy+Bookletter+1911' rel='stylesheet' type='text/css'>
  <script>
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <!----- HEADER START---> 
+    <!----- HEADER START--->
     <header id="header">
     <div class="content">
     <nav id="nav">
@@ -30,45 +30,45 @@
     </div>
     </header>
 
-    <!----- SLIDES START ---> 
+    <!----- SLIDES START --->
  <div id="slide1">
     <div class="content">
     <h2>Hi!</h2>
     <h1>I'm Catarina</h1>
-    </div> 
-    </div> 
+    </div>
+    </div>
     <div id="slide2">
     <div class="content" >
     <div class="slide-content">
     <img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/>
-    <h3 class="slide-text">“Then the Grinch thought of something he hadn't before! What if Christmas, he thought, doesn't come from a store. What if Christmas...perhaps...means a little bit more!”</h3>
-    
-    </div> 
-    </div> 
-    </div> 
+    <h3 class="slide-text">“Here comes a whole lot of about me text yay! What if Christmas, he thought, doesn't come from a store. What if Christmas...perhaps...means a little bit more!”</h3>
+
+    </div>
+    </div>
+    </div>
     <div id="slide3">
     <div class="content">
     <div class="slide-content">
     <h3 class="slide-text">“I truly believe that if we keep telling the Christmas story, singing the Christmas songs, and living the Christmas spirit, we can bring joy and happiness and peace to this world.” </h3>
-  
-    </div> 
-    </div> 
-    </div> 
+
+    </div>
+    </div>
+    </div>
     <div id="slide4">
     <div class="content">
     <div class="slide-content">
     <h3 class="slide-text">“Christmas doesn't come from a store, maybe Christmas perhaps means a little bit more....” </h3>
 
-    </div> 
-    </div> 
-    </div> 
+    </div>
+    </div>
+    </div>
     <div id="slide5">
     <div class="content">
     <div class="slide-content">
     <h3 class="slide-text">“My idea of Christmas, whether old-fashioned or modern, is very simple: loving others. Come to think of it, why do we have to wait for Christmas to do that?” </h3>
-    </div> 
-    </div> 
-    </div> 
+    </div>
+    </div>
+    </div>
     <!----- SLIDES END --->
    </body>
    </html>
