smooth scrolling. yay

--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Catarina</title>
   <link rel="stylesheet" href="css/style.css"/>
-  <script type="text/javascript" src="js/paralax.js"></script>
+  <script  src="js/javascript.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
 
   <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
@@ -37,12 +37,11 @@
       <h1>I'm Catarina</h1>
     </div>
   </div>
-  <div id="slide2">
+  <div name="slide2" id="slide2">
     <div class="content" >
       <div class="slide-content">
         <img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/>
-        <h3 class="slide-text">“Here comes a whole lot of about me text yay! What if Christmas, he thought, doesn't come from a store. What if Christmas...perhaps...means a little bit more!”</h3>
-
+        <h3 class="slide-text">“Here comes a whole lot of about me text yay! What if Christmas, he thought, doesn't come from a store. What if Christmas...perhaps...means a little bit more!”</h3>  
       </div>
     </div>
   </div>
