--- a/main.html
+++ b/main.html
@@ -50,22 +50,52 @@
     <div class="content">
       <div class="slide-content">
         <h3 class="slide-text">“I truly believe that if we keep telling the Christmas story, singing the Christmas songs, and living the Christmas spirit, we can bring joy and happiness and peace to this world.” </h3>
+        <div id="skills" class="col-md-5 col-centered">
+           <div class="skillbar clearfix " data-percent="95%">
+  <div class="skillbar-title" style="background: #131313;"><span>C++</span></div>
+  <div class="skillbar-bar" style="background: #131313;"></div>
+  <div class="skill-bar-percent">95%</div>
+</div>
 
+ <div class="skillbar clearfix " data-percent="85%">
+  <div class="skillbar-title" style="background: #131313;"><span>Web development</span></div>
+  <div class="skillbar-bar" style="background: #131313;"></div>
+  <div class="skill-bar-percent">85%</div>
+</div>
+
+ <div class="skillbar clearfix" data-percent="75%">
+  <div class="skillbar-title" style="background: #131313;"><span>Java</span></div>
+  <div class="skillbar-bar" style="background: #131313;"></div>
+  <div class="skill-bar-percent">75%</div>
+</div>
       </div>
     </div>
   </div>
   <div id="slide4">
     <div class="content">
       <div class="slide-content">
-        <h3 class="slide-text">“Christmas doesn't come from a store, maybe Christmas perhaps means a little bit more....” </h3>
-
+        <h3 class="slide-text">These are the projects i've worked on. </h3>
+        <table>
+  <tr>
+    <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+    <td>Project 1</td>
+  </tr>
+  <tr>
+    <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+    <td>Project 2</td>
+  </tr>
+  <tr>
+    <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+    <td>Project 3</td>
+  </tr>
+</table>
       </div>
     </div>
   </div>
   <div id="slide5">
     <div class="content">
       <div class="slide-content">
-        <h3 class="slide-text">“My idea of Christmas, whether old-fashioned or modern, is very simple: loving others. Come to think of it, why do we have to wait for Christmas to do that?” </h3>
+        <h3 class="slide-text">Do you have a question or want to hire me feel free to contact me trough the links below.</h3>
       </div>
     </div>
   </div>
