Changes to the skillbar which now show properly in the slide

--- a/main.html
+++ b/main.html
@@ -49,56 +49,57 @@
   <div id="slide3">
     <div class="content">
       <div class="slide-content">
-        <h3 class="slide-text">“I truly believe that if we keep telling the Christmas story, singing the Christmas songs, and living the Christmas spirit, we can bring joy and happiness and peace to this world.” </h3>
+        <h3 class="slide-text">This are temporary skillbars. They can be done better but hey this is it for now. </h3>
         <div id="skills" class="col-md-5 col-centered">
-           <div class="skillbar clearfix " data-percent="95%">
-  <div class="skillbar-title" style="background: #131313;"><span>C++</span></div>
-  <div class="skillbar-bar" style="background: #131313;"></div>
-  <div class="skill-bar-percent">95%</div>
-</div>
+          <div class="skillbar clearfix " data-percent="95%">
+            <div class="skillbar-title" style="background: #131313;"><span>C++</span></div>
+            <div class="skillbar-bar" style="background: #131313;"></div>
+            <div class="skill-bar-percent">95%</div>
+          </div>
 
- <div class="skillbar clearfix " data-percent="85%">
-  <div class="skillbar-title" style="background: #131313;"><span>Web development</span></div>
-  <div class="skillbar-bar" style="background: #131313;"></div>
-  <div class="skill-bar-percent">85%</div>
-</div>
+          <div class="skillbar clearfix " data-percent="85%">
+            <div class="skillbar-title" style="background: #131313;"><span>Web development</span></div>
+            <div class="skillbar-bar" style="background: #131313;"></div>
+            <div class="skill-bar-percent">85%</div>
+          </div>
 
- <div class="skillbar clearfix" data-percent="75%">
-  <div class="skillbar-title" style="background: #131313;"><span>Java</span></div>
-  <div class="skillbar-bar" style="background: #131313;"></div>
-  <div class="skill-bar-percent">75%</div>
+          <div class="skillbar clearfix" data-percent="75%">
+            <div class="skillbar-title" style="background: #131313;"><span>Java</span></div>
+            <div class="skillbar-bar" style="background: #131313;"></div>
+            <div class="skill-bar-percent">75%</div>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
+    <div id="slide4">
+      <div class="content">
+        <div class="slide-content">
+          <h3 class="slide-text">These are the projects i've worked on. </h3>
+          <table>
+            <tr>
+              <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+              <td>Project 1</td>
+            </tr>
+            <tr>
+              <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+              <td>Project 2</td>
+            </tr>
+            <tr>
+              <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+              <td>Project 3</td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="slide4">
-    <div class="content">
-      <div class="slide-content">
-        <h3 class="slide-text">These are the projects i've worked on. </h3>
-        <table>
-  <tr>
-    <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
-    <td>Project 1</td>
-  </tr>
-  <tr>
-    <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
-    <td>Project 2</td>
-  </tr>
-  <tr>
-    <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
-    <td>Project 3</td>
-  </tr>
-</table>
+    <div id="slide5">
+      <div class="content">
+        <div class="slide-content">
+          <h3 class="slide-text">Do you have a question or want to hire me feel free to contact me trough the links below.</h3>
+        </div>
       </div>
     </div>
-  </div>
-  <div id="slide5">
-    <div class="content">
-      <div class="slide-content">
-        <h3 class="slide-text">Do you have a question or want to hire me feel free to contact me trough the links below.</h3>
-      </div>
-    </div>
-  </div>
-  <!--- SLIDES END --->
-</body>
-</html>
+    <!--- SLIDES END --->
+  </body>
+  </html>
