--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script language="JavaScript" type="text/javascript" src="js/javascript.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
-
+  <!--I use font awesome to provide the back to top icon-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href='http://fonts.googleapis.com/css?family=Wellfleet' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
@@ -71,35 +72,37 @@
         </div>
       </div>
     </div>
-</div>
-    <div id="slide4">
-      <div class="content">
-        <div class="slide-content">
-          <h3 class="slide-text">These are the projects i've worked on. </h3>
-          <table>
-            <tr>
-              <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
-              <td>Project 1</td>
-            </tr>
-            <tr>
-              <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
-              <td>Project 2</td>
-            </tr>
-            <tr>
-              <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
-              <td>Project 3</td>
-            </tr>
-          </table>
-        </div>
+  </div>
+  <div id="slide4">
+    <div class="content">
+      <div class="slide-content">
+        <h3 class="slide-text">These are the projects i've worked on. </h3>
+        <table>
+          <tr>
+            <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+            <td>Project 1</td>
+          </tr>
+          <tr>
+            <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+            <td>Project 2</td>
+          </tr>
+          <tr>
+            <td><img src="https://pa1.narvii.com/6164/f79110f1da83318c69e03259fc80b28c71652e11_128.gif" align="left"/></td>
+            <td>Project 3</td>
+          </tr>
+        </table>
       </div>
     </div>
-    <div id="slide5">
-      <div class="content">
-        <div class="slide-content">
-          <h3 class="slide-text">Do you have a question or want to hire me feel free to contact me trough the links below.</h3>
-        </div>
+  </div>
+  <div id="slide5">
+    <div class="content">
+      <div class="slide-content">
+        <h3 class="slide-text">Do you have a question or want to hire me feel free to contact me trough the links below.</h3>
       </div>
     </div>
-    <!--- SLIDES END --->
-  </body>
-  </html>
+  </div>
+  <!--- SLIDES END --->
+  <!--this is the back to top button that appears!-->
+  <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
+</body>
+</html>
