--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
     <div class="content">
       <nav id="nav">
         <ul>
-          <li><a href="#slide2" class="active" title="Next Section" >About Me</a></li>
+          <li><a href="#slide2" title="Next Section" >About Me</a></li>
           <li><a href="#slide3" title="Next Section">Skills</a></li>
           <li><a href="#slide4" title="Next Section">Projects</a></li>
           <li><a href="#slide5" title="Next Section">Contact</a></li>
